--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -6,6 +6,7 @@ parts +=
     sphinxbuilder
     test
     instance
+    zeoserver
 
 eggs +=
     tutorial.todoapp [develop,test]
@@ -56,4 +57,7 @@ user = admin:admin
 debug-mode = off
 verbose-security = on
 eggs = ${buildout:eggs}
+zeo-client = on
 
+[zeoserver]
+recipe = plone.recipe.zeoserver
